// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`running on both client and server 1`] = `
Object {
  "data": Array [
    128,
    12,
    120,
    156,
    99,
    96,
    32,
    31,
    0,
    0,
    0,
    60,
    0,
    1,
  ],
  "type": "Buffer",
}
`;

exports[`running on both client and server 2`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
